Bug 388547 - Layer with copied transform mask isn't "smoothed"
Summary: Layer with copied transform mask isn't "smoothed"
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: 4.0 pre-alpha
Platform: Microsoft Windows Microsoft Windows
: NOR minor
Target Milestone: ---
Assignee: Dmitry Kazakov
URL:
Keywords: regression, release_blocker
: 388548 (view as bug list)
Depends on:
Blocks:
 
Reported: 2018-01-04 22:57 UTC by Alex
Modified: 2018-03-13 08:53 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Duplicated transform mask isn't smoothed (1.03 MB, application/x-krita)
2018-01-04 22:57 UTC, Alex
Details
Grouped and transformed layer mask isn't smoothed (889.27 KB, application/x-krita)
2018-03-06 13:09 UTC, Alex
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alex 2018-01-04 22:57:40 UTC
Created attachment 109680 [details]
Duplicated transform mask isn't smoothed

To replicate:
- open attached kra file
- zoom into photo
- wait a while until Krita finishes smoothing
- duplicate layer with "Duplicate" button, it will be duplicated with transform mask
- turn off original layer
- neither turning off and on layer or mask makes transformed layer smooth
Sidenote 1: after saving and opening kra file both transform masks work fine
Sidenote 2: if I duplicate paint layer and transform mask separately same thing happens

Krita version: 4.0 alpha, git aeb04cc
Used CC0 picture by Spencer Selover
Comment 1 Halla Rempt 2018-01-05 08:55:04 UTC
*** Bug 388548 has been marked as a duplicate of this bug. ***
Comment 2 Dmitry Kazakov 2018-02-26 15:41:07 UTC
Git commit 9459587d7cac637c8e9381891759e80cd952ec86 by Dmitry Kazakov.
Committed on 26/02/2018 at 15:40.
Pushed by dkazakov into branch 'master'.

Fix transform mask signal connection on duplication

M  +5    -0    libs/global/kis_thread_safe_signal_compressor.cpp
M  +2    -0    libs/global/kis_thread_safe_signal_compressor.h
M  +12   -13   libs/image/kis_transform_mask.cpp
M  +0    -4    libs/image/kis_transform_mask.h

https://commits.kde.org/krita/9459587d7cac637c8e9381891759e80cd952ec86
Comment 3 Alex 2018-03-06 13:09:05 UTC
Created attachment 111220 [details]
Grouped and transformed layer mask isn't smoothed

I think this is related. Similar to previous example but when layer with transform mask and filter mask is inside group it isn't smoothed.
Comment 4 Halla Rempt 2018-03-06 13:19:23 UTC
I guess dmitry'll have to look at that, too.
Comment 5 Dmitry Kazakov 2018-03-12 16:06:04 UTC
Git commit a41aeb7b39f63f1e08185078f32c17cd86e91dcb by Dmitry Kazakov.
Committed on 12/03/2018 at 16:04.
Pushed by dkazakov into branch 'master'.

Fix update of the mask projection on a layer above a layer with transformation mask

KisMergeWalker::startTrip() was expected to skip mark as N_ABOVE_FILTHY
only the currently updated transformation mask, not all layers above.
All the higher layers should be marked as FILTHY.

M  +13   -7    libs/image/kis_merge_walker.cc
M  +4    -1    libs/image/kis_merge_walker.h

https://commits.kde.org/krita/a41aeb7b39f63f1e08185078f32c17cd86e91dcb
Comment 6 Halla Rempt 2018-03-13 08:53:00 UTC
Git commit 48bff8d154b0c00834559269ce63ee67eed1b022 by Boudewijn Rempt, on behalf of Dmitry Kazakov.
Committed on 13/03/2018 at 08:52.
Pushed by rempt into branch 'krita/4.0'.

Fix update of the mask projection on a layer above a layer with transformation mask

KisMergeWalker::startTrip() was expected to skip mark as N_ABOVE_FILTHY
only the currently updated transformation mask, not all layers above.
All the higher layers should be marked as FILTHY.
(cherry picked from commit a41aeb7b39f63f1e08185078f32c17cd86e91dcb)

M  +13   -7    libs/image/kis_merge_walker.cc
M  +4    -1    libs/image/kis_merge_walker.h

https://commits.kde.org/krita/48bff8d154b0c00834559269ce63ee67eed1b022