Fix transform mask signal connection on duplication

BUG:388547